--- a/functionalextensions/FunctionalExtensions.csproj
+++ b/functionalextensions/FunctionalExtensions.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Option.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
+    <Compile Include="Validator.cs" />
     <Compile Include="Validation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
