--- a/FunctionalExtensions.Tests/FunctionalExtensions.Tests.csproj
+++ b/FunctionalExtensions.Tests/FunctionalExtensions.Tests.csproj
@@ -45,7 +45,9 @@
     <Compile Include="ChoiceTests.cs" />
     <Compile Include="OptionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResultTests.cs" />
+    <Compile Include="Validation\Fluent\FluentValidationTests.cs" />
+    <Compile Include="Validation\TestModels.cs" />
+    <Compile Include="Validation\ValidationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -56,6 +58,10 @@
       <Name>FunctionalExtensions</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
