--- a/FunctionalExtensions.Tests/FunctionalExtensions.Tests.csproj
+++ b/FunctionalExtensions.Tests/FunctionalExtensions.Tests.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChoiceTests.cs" />
+    <Compile Include="Division.cs" />
     <Compile Include="OptionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\Fluent\FluentValidationTests.cs" />
