--- a/functionalextensions/FunctionalExtensions.csproj
+++ b/functionalextensions/FunctionalExtensions.csproj
@@ -44,8 +44,16 @@
     <Compile Include="Lambda\Func.cs" />
     <Compile Include="Option.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\Errors.cs" />
+    <Compile Include="Validation\Fluent\Chain.cs" />
+    <Compile Include="Validation\Fluent\IChain.cs" />
+    <Compile Include="Validation\Fluent\IValidateThat.cs" />
+    <Compile Include="Validation\Fluent\IValidateThatMember.cs" />
+    <Compile Include="Validation\Fluent\ValidateWithErrorType.cs" />
+    <Compile Include="Validation\Fluent\ValidateThat.cs" />
     <Compile Include="Validation\Result.cs" />
-    <Compile Include="Validation\Fluent\FluentValidator.cs" />
+    <Compile Include="Validation\Fluent\ValidateThatMember.cs" />
+    <Compile Include="Validation\ResultExtensions.cs" />
     <Compile Include="Validation\Validator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
