enum extensions moved

--- a/EnumExtensions/EnumExtensions.csproj
+++ b/EnumExtensions/EnumExtensions.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E59892FE-0602-4126-837E-7FB6EB4E567B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{71321685-A629-443C-A573-07B9E8FAA7DE}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FunctionalExtensions.ConsoleApp</RootNamespace>
-    <AssemblyName>FunctionalExtensions.ConsoleApp</AssemblyName>
+    <RootNamespace>EnumExtensions</RootNamespace>
+    <AssemblyName>EnumExtensions</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,21 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Attributes\EnumDisplayNameAttribute.cs" />
+    <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EnumExtensions\EnumExtensions.csproj">
-      <Project>{71321685-A629-443C-A573-07B9E8FAA7DE}</Project>
-      <Name>EnumExtensions</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\functionalextensions\FunctionalExtensions.csproj">
-      <Project>{d0b6546e-954b-4014-bf7c-8058b4f97108}</Project>
-      <Name>FunctionalExtensions</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
