--- a/FunctionalExtensions.Tests/FunctionalExtensions.Tests.csproj
+++ b/FunctionalExtensions.Tests/FunctionalExtensions.Tests.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="ChoiceTests.cs" />
     <Compile Include="Division.cs" />
-    <Compile Include="FluentOptionTests.cs" />
+    <Compile Include="FluentOption\FluentOptionTests.cs" />
     <Compile Include="OptionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\Fluent\FluentValidationTests.cs" />
