--- a/functionalextensions/FunctionalExtensions.csproj
+++ b/functionalextensions/FunctionalExtensions.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Some.cs" />
     <Compile Include="Validation\Failures.cs" />
+    <Compile Include="Validation\Fluent\IIntermediate2A.cs" />
     <Compile Include="Validation\Fluent\IResult.cs" />
     <Compile Include="Validation\Fluent\FluentSelectionValidator.cs" />
     <Compile Include="Validation\Fluent\IIntermediate1.cs" />
