--- a/FunctionalExtensions.Tests/FunctionalExtensions.Tests.csproj
+++ b/FunctionalExtensions.Tests/FunctionalExtensions.Tests.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ChoiceTests.cs" />
     <Compile Include="Division.cs" />
     <Compile Include="FluentOption\FluentOptionTests.cs" />
+    <Compile Include="OperatorsTests.cs" />
     <Compile Include="OptionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\Fluent\FluentValidationTests.cs" />
