--- a/NuGet/FunctionalExtensions.nuspec
+++ b/NuGet/FunctionalExtensions.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>FunctionalExtensions for C#</id>
-    <version>1.2.0</version>
+    <id>FunctionalExtensions</id>
+    <version>1.0.0.0</version>
     <authors>Leif Battermann</authors>
     <owners>Webrunners GmbH</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
