--- a/NuGet/FunctionalExtensions.nuspec
+++ b/NuGet/FunctionalExtensions.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>FunctionalExtensions</id>
     <title>Functional Extensions for C#</title>
-    <version>1.3.0.0</version>
+    <version>1.3.0.1</version>
     <authors>Leif Battermann</authors>
     <owners>Webrunners GmbH</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -13,7 +13,7 @@
     <projectUrl>https://github.com/webrunners/FunctionalExtensions</projectUrl>
     <licenseUrl>https://github.com/webrunners/FunctionalExtensions/blob/develop/LICENSE.txt</licenseUrl>
     <tags>FP Option Choice Maybe Either C# .Net Functional Monad</tags>
-    <releaseNotes>Create Option instances from Nullable&lt;T&gt;, implicit operator for Option, extension method for pipelining</releaseNotes>
+    <releaseNotes>equality comparison edited</releaseNotes>
     <dependencies>
     </dependencies>
   </metadata>
