--- a/FunctionalExtensions.Examples/FunctionalExtensions.Examples.csproj
+++ b/FunctionalExtensions.Examples/FunctionalExtensions.Examples.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFrameworks>netcoreapp1.1;net452</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
