--- a/FunctionalExtensions.Validation/FunctionalExtensions.Validation.csproj
+++ b/FunctionalExtensions.Validation/FunctionalExtensions.Validation.csproj
@@ -6,6 +6,16 @@
     <ApplicationIcon />
     <OutputTypeEx>library</OutputTypeEx>
     <StartupObject />
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>1.4.0</Version>
+    <Authors>Leif Battermann, Christoph von Krüchten</Authors>
+    <Company>Webrunners GmbH</Company>
+    <Product>Functional Validation Extensions for C#</Product>
+    <Description>Functional validation for C#</Description>
+    <Copyright>Copyright 2017 Webrunners GmbH</Copyright>
+    <PackageLicenseUrl>https://github.com/webrunners/FunctionalExtensions/blob/develop/LICENSE.txt</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/webrunners/FunctionalExtensions</PackageProjectUrl>
+    <PackageTags>FP C# .Net Functional Validation Monad</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
