--- a/FunctionalExtensions/FunctionalExtensions.csproj
+++ b/FunctionalExtensions/FunctionalExtensions.csproj
@@ -14,9 +14,10 @@
     <PackageLicenseUrl>https://github.com/webrunners/FunctionalExtensions/blob/develop/LICENSE.txt</PackageLicenseUrl>
     <PackageTags>FP Option Choice Maybe Either C# .Net Functional Monad</PackageTags>
     <PackageReleaseNotes></PackageReleaseNotes>
-    <Version>1.3.1</Version>
+    <Version>1.4.0</Version>
     <RepositoryUrl></RepositoryUrl>
     <RepositoryType></RepositoryType>
+    <PackageId>FunctionalExtensions</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
